views: make coordinate conversion consistent

Widget::SetBounds() converts DIPs to pixels using
Screen::DIPToScreenRectInWindow(). Screen::DIPToScreenRectInWindow()
uses enclosing rect. In window-service related code we scale the size
separately. This is done to avoid the size being dependant on the location.

The fix is to add a SetBoundsInDIP to DesktopWindowTreeHost so that
DesktopWindowTreeHostMus can have a different implementation.

BUG=919250
TEST=covered by test

Change-Id: I0d38e7af8631fe3a4ea5cc2c785c2ed9adad41e0
Reviewed-on: https://chromium-review.googlesource.com/c/1401236
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620906}
Former-commit-id: e910f9b0be3a4c791f021a3cc33f481d6d420261